[package]
name = "jenga"
version = "0.1.0"
authors = ["Andrea Cognolato <andrecogno@hotmail.it>"]

[dependencies]
serde = "1.0.70"
serde_derive = "1.0.70"
serde_json = "1.0.21"
rocket = "0.3.14"
rocket_codegen = "0.3.14"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]
